--- a/docbuild/api/Scrapbook101core.Controllers.ItemApiController.yml
+++ b/docbuild/api/Scrapbook101core.Controllers.ItemApiController.yml
@@ -20,8 +20,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Controllers/ItemApiController.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: ItemApiController
     path: ../Scrapbook101core/Controllers/ItemApiController.cs
     startLine: 14
@@ -251,8 +251,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Controllers/ItemApiController.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: GetAsync
     path: ../Scrapbook101core/Controllers/ItemApiController.cs
     startLine: 27
@@ -270,7 +270,7 @@ items:
 
       [ProducesResponseType(404)]
 
-      public Task<ActionResult<IEnumerable<Item>>> GetAsync([FromQuery] string filter)
+      public async Task<ActionResult<IEnumerable<Item>>> GetAsync([FromQuery] string filter)
     parameters:
     - id: filter
       type: System.String
@@ -307,6 +307,7 @@ items:
       value: 404
   modifiers.csharp:
   - public
+  - async
   modifiers.vb:
   - Public
 - uid: Scrapbook101core.Controllers.ItemApiController.DetailsAsync(System.String)
@@ -323,8 +324,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Controllers/ItemApiController.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: DetailsAsync
     path: ../Scrapbook101core/Controllers/ItemApiController.cs
     startLine: 68
@@ -338,7 +339,7 @@ items:
     content: >-
       [HttpGet("{id}", Name = "Details")]
 
-      public Task<ActionResult<Item>> DetailsAsync(string id)
+      public async Task<ActionResult<Item>> DetailsAsync(string id)
     parameters:
     - id: id
       type: System.String
@@ -363,6 +364,7 @@ items:
       value: Details
   modifiers.csharp:
   - public
+  - async
   modifiers.vb:
   - Public
 - uid: Scrapbook101core.Controllers.ItemApiController.CreateAsync(Scrapbook101core.Models.Item)
@@ -379,8 +381,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Controllers/ItemApiController.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CreateAsync
     path: ../Scrapbook101core/Controllers/ItemApiController.cs
     startLine: 87
@@ -398,7 +400,7 @@ items:
 
       [ProducesResponseType(400)]
 
-      public Task<ActionResult<string>> CreateAsync([FromBody] Item value)
+      public async Task<ActionResult<string>> CreateAsync([FromBody] Item value)
     parameters:
     - id: value
       type: Scrapbook101core.Models.Item
@@ -438,6 +440,7 @@ items:
       value: 400
   modifiers.csharp:
   - public
+  - async
   modifiers.vb:
   - Public
 - uid: Scrapbook101core.Controllers.ItemApiController.UpdateAsync(System.String,Scrapbook101core.Models.Item)
@@ -454,8 +457,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Controllers/ItemApiController.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: UpdateAsync
     path: ../Scrapbook101core/Controllers/ItemApiController.cs
     startLine: 139
@@ -473,7 +476,7 @@ items:
 
       [ProducesResponseType(400)]
 
-      public Task<ActionResult<string>> UpdateAsync(string id, [FromBody] Item value)
+      public async Task<ActionResult<string>> UpdateAsync(string id, [FromBody] Item value)
     parameters:
     - id: id
       type: System.String
@@ -518,6 +521,7 @@ items:
       value: 400
   modifiers.csharp:
   - public
+  - async
   modifiers.vb:
   - Public
 - uid: Scrapbook101core.Controllers.ItemApiController.DeleteAsync(System.String)
@@ -534,8 +538,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Controllers/ItemApiController.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: DeleteAsync
     path: ../Scrapbook101core/Controllers/ItemApiController.cs
     startLine: 192
@@ -555,7 +559,7 @@ items:
 
       [ProducesResponseType(404)]
 
-      public void DeleteAsync(string id)
+      public async void DeleteAsync(string id)
     parameters:
     - id: id
       type: System.String
@@ -598,6 +602,7 @@ items:
       value: 404
   modifiers.csharp:
   - public
+  - async
   modifiers.vb:
   - Public
 references:
