--- a/docbuild/api/Scrapbook101core.HelperClasses.yml
+++ b/docbuild/api/Scrapbook101core.HelperClasses.yml
@@ -17,8 +17,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/HelperClasses.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: HelperClasses
     path: ../Scrapbook101core/HelperClasses.cs
     startLine: 12
@@ -61,8 +61,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/HelperClasses.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: BuildPathList
     path: ../Scrapbook101core/HelperClasses.cs
     startLine: 22
@@ -106,8 +106,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/HelperClasses.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: GetGeocode
     path: ../Scrapbook101core/HelperClasses.cs
     startLine: 63
@@ -118,7 +118,7 @@ items:
   remarks: "\nGets the geocode (latitude, longitude) from a string location description.\n"
   example: []
   syntax:
-    content: public static Task<double[]> GetGeocode(string location)
+    content: public static async Task<double[]> GetGeocode(string location)
     parameters:
     - id: location
       type: System.String
@@ -131,6 +131,7 @@ items:
   modifiers.csharp:
   - public
   - static
+  - async
   modifiers.vb:
   - Public
   - Shared
