--- a/docbuild/api/Scrapbook101core.Models.AssetItem.yml
+++ b/docbuild/api/Scrapbook101core.Models.AssetItem.yml
@@ -21,8 +21,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: AssetItem
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 150
@@ -66,8 +66,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Name
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 152
@@ -75,12 +75,26 @@ items:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
   syntax:
-    content: public string Name { get; set; }
+    content: >-
+      [JsonProperty(PropertyName = "name")]
+
+      public string Name { get; set; }
     parameters: []
     return:
       type: System.String
-    content.vb: Public Property Name As String
+    content.vb: >-
+      <JsonProperty(PropertyName:="name")>
+
+      Public Property Name As String
   overload: Scrapbook101core.Models.AssetItem.Name*
+  attributes:
+  - type: Newtonsoft.Json.JsonPropertyAttribute
+    ctor: Newtonsoft.Json.JsonPropertyAttribute.#ctor
+    arguments: []
+    namedArguments:
+    - name: PropertyName
+      type: System.String
+      value: name
   modifiers.csharp:
   - public
   - get
@@ -101,8 +115,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Size
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 155
@@ -110,12 +124,26 @@ items:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
   syntax:
-    content: public string Size { get; set; }
+    content: >-
+      [JsonProperty(PropertyName = "size")]
+
+      public string Size { get; set; }
     parameters: []
     return:
       type: System.String
-    content.vb: Public Property Size As String
+    content.vb: >-
+      <JsonProperty(PropertyName:="size")>
+
+      Public Property Size As String
   overload: Scrapbook101core.Models.AssetItem.Size*
+  attributes:
+  - type: Newtonsoft.Json.JsonPropertyAttribute
+    ctor: Newtonsoft.Json.JsonPropertyAttribute.#ctor
+    arguments: []
+    namedArguments:
+    - name: PropertyName
+      type: System.String
+      value: size
   modifiers.csharp:
   - public
   - get
@@ -136,8 +164,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Equals
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 158
@@ -171,8 +199,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Equals
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 163
@@ -209,8 +237,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: GetHashCode
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 170
@@ -244,8 +272,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CompareTo
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 174
