--- a/docbuild/api/Scrapbook101core.Models.Category.yml
+++ b/docbuild/api/Scrapbook101core.Models.Category.yml
@@ -18,8 +18,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Category
     path: ../Scrapbook101core/Models/Category.cs
     startLine: 13
@@ -62,8 +62,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Id
     path: ../Scrapbook101core/Models/Category.cs
     startLine: 15
@@ -74,12 +74,16 @@ items:
     content: >-
       [Required(ErrorMessage = "id is required.")]
 
+      [JsonProperty(PropertyName = "id")]
+
       public string Id { get; set; }
     parameters: []
     return:
       type: System.String
     content.vb: >-
       <Required(ErrorMessage:="id is required.")>
+
+      <JsonProperty(PropertyName:="id")>
 
       Public Property Id As String
   overload: Scrapbook101core.Models.Category.Id*
@@ -91,6 +95,13 @@ items:
     - name: ErrorMessage
       type: System.String
       value: id is required.
+  - type: Newtonsoft.Json.JsonPropertyAttribute
+    ctor: Newtonsoft.Json.JsonPropertyAttribute.#ctor
+    arguments: []
+    namedArguments:
+    - name: PropertyName
+      type: System.String
+      value: id
   modifiers.csharp:
   - public
   - get
@@ -111,8 +122,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Type
     path: ../Scrapbook101core/Models/Category.cs
     startLine: 19
@@ -123,12 +134,16 @@ items:
     content: >-
       [Required(ErrorMessage = "Type is required.")]
 
+      [JsonProperty(PropertyName = "type")]
+
       public string Type { get; set; }
     parameters: []
     return:
       type: System.String
     content.vb: >-
       <Required(ErrorMessage:="Type is required.")>
+
+      <JsonProperty(PropertyName:="type")>
 
       Public Property Type As String
   overload: Scrapbook101core.Models.Category.Type*
@@ -140,6 +155,13 @@ items:
     - name: ErrorMessage
       type: System.String
       value: Type is required.
+  - type: Newtonsoft.Json.JsonPropertyAttribute
+    ctor: Newtonsoft.Json.JsonPropertyAttribute.#ctor
+    arguments: []
+    namedArguments:
+    - name: PropertyName
+      type: System.String
+      value: type
   modifiers.csharp:
   - public
   - get
@@ -160,8 +182,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Categories
     path: ../Scrapbook101core/Models/Category.cs
     startLine: 23
@@ -169,12 +191,26 @@ items:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
   syntax:
-    content: public List<CategoryItem> Categories { get; set; }
+    content: >-
+      [JsonProperty(PropertyName = "categories")]
+
+      public List<CategoryItem> Categories { get; set; }
     parameters: []
     return:
       type: System.Collections.Generic.List{Scrapbook101core.Models.CategoryItem}
-    content.vb: Public Property Categories As List(Of CategoryItem)
+    content.vb: >-
+      <JsonProperty(PropertyName:="categories")>
+
+      Public Property Categories As List(Of CategoryItem)
   overload: Scrapbook101core.Models.Category.Categories*
+  attributes:
+  - type: Newtonsoft.Json.JsonPropertyAttribute
+    ctor: Newtonsoft.Json.JsonPropertyAttribute.#ctor
+    arguments: []
+    namedArguments:
+    - name: PropertyName
+      type: System.String
+      value: categories
   modifiers.csharp:
   - public
   - get
