--- a/docbuild/api/Scrapbook101core.Models.CombinedModel.yml
+++ b/docbuild/api/Scrapbook101core.Models.CombinedModel.yml
@@ -20,8 +20,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CombinedModel
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 13
@@ -64,8 +64,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Item
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 15
@@ -99,8 +99,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CategoryItemsForDisplay
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 17
@@ -134,8 +134,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CategoryFieldMappingList
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 18
@@ -169,8 +169,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: LocalUploadFileList
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 19
@@ -204,8 +204,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/CombinedModel.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: main
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: LocalHttpPostedFileList
     path: ../Scrapbook101core/Models/CombinedModel.cs
     startLine: 20
